Bug 342696 - Cantor crashes when trying to close the script editor
Summary: Cantor crashes when trying to close the script editor
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Alexander Rieder
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-10 15:20 UTC by Minh Ngo
Modified: 2015-01-22 00:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Minh Ngo 2015-01-10 15:20:39 UTC
Reproduced at least in eb2d338899f7a456e2162dd37b1fb13ba55445fc in the frameworks branch

Reproducible: Always

Steps to Reproduce:
1. Run cantor
2. View -> Show Script Editor
3. Close Script Editor

Actual Results:  
Crash

Expected Results:  
Successful completion
Comment 1 Minh Ngo 2015-01-10 15:32:26 UTC
How to assign this bug to me?
Comment 2 Minh Ngo 2015-01-11 16:28:22 UTC
Git commit 13785aee03bc2191110c13514e733b4e6545bf94 by Minh Ngo.
Committed on 11/01/2015 at 16:24.
Pushed by minhngo into branch 'frameworks'.

Fixing the crash when trying to close the script editor.
REVIEW: 121970

M  +1    -1    src/cantor_part.cpp
M  +0    -2    src/cantor_part.h

http://commits.kde.org/cantor/13785aee03bc2191110c13514e733b4e6545bf94