Fixing the crash when trying to close the script editor.

BUG: 342696
REVIEW: 121970